examples/gateway/gateway-nodeport-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: contour-operator
  name: contour-operator
---
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour-test
---
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: sample-gatewayclass
spec:
  controller: projectcontour.io/contour-operator
  parametersRef:
    group: operator.projectcontour.io
    kind: Contour
    scope: Namespace
    name: contour-gateway-sample
    namespace: contour-operator
---
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: contour
  namespace: projectcontour-test
spec:
  gatewayClassName: sample-gatewayclass
  listeners:
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: kuard
    - protocol: HTTPS
      port: 443
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            app: kuard
